Widen right-column-wrapper for scheduler to prevent overlapping elements
Fixes CNVS-19699

When creating an appointment group within the scheduler, the icon to delete
a time-slot is covered with a scroll bar after 3 or more time-slots have 
been created.

Reviewed-on: https://gerrit.instructure.com/51616
Tested-by: Jenkins
QA-Review: Steven Shepherd <sshepherd@instructure.com>
Product-Review: Cosme Salazar <cosme@instructure.com>

--- a/app/stylesheets/pages/calendar/_scheduler.scss
+++ b/app/stylesheets/pages/calendar/_scheduler.scss
@@ -185,7 +185,7 @@
     padding: 0;
   }
   .right-column-wrapper {
-    width: 380px;
+    width: 400px;
   }
 }
 
